Migrate to Android API 31, Gradle 7.3.3 and Java 11